# routes/directors.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+const directorController = require('../controller/directors');
+
+const { directorValidation } = require('./validation.js');
+
+
+router.get('/:name', directorController.getDirectors);
+
+//router.get('/:id', movieController.getOne);
